k8s/manifests/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: amazon-demo
  labels:
    name: amazon-demo
    environment: local
